--- a/RankTest/viewControllers/picturesCollection/RNKPictureCollectionViewCell.xib
+++ b/RankTest/viewControllers/picturesCollection/RNKPictureCollectionViewCell.xib
@@ -15,9 +15,16 @@
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rw5-w5-8x8">
                         <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="xmu-dU-370">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jhg-o4-fyV">
                         <rect key="frame" x="0.0" y="125" width="150" height="25"/>
                         <color key="backgroundColor" red="0.6637387776" green="0.6637387776" blue="0.6637387776" alpha="0.5" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="25" id="0sR-ap-dZG"/>
+                        </constraints>
+                    </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="xmu-dU-370">
+                        <rect key="frame" x="5" y="125" width="140" height="25"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="25" id="FHu-va-63x"/>
                             <constraint firstAttribute="width" constant="84" id="eJV-P7-lxi"/>
@@ -37,7 +44,7 @@
                             <constraint firstAttribute="width" constant="42" id="JRs-7T-ayE"/>
                             <constraint firstAttribute="height" constant="14" id="QyM-D2-Ar5"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -47,17 +54,20 @@
             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="centerX" secondItem="rw5-w5-8x8" secondAttribute="centerX" id="9L7-qe-s5W"/>
-                <constraint firstItem="xmu-dU-370" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="9nk-cE-X6A"/>
+                <constraint firstItem="xmu-dU-370" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="9nk-cE-X6A"/>
                 <constraint firstItem="7vL-OM-r5c" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="AJW-0o-Jxm"/>
+                <constraint firstItem="jhg-o4-fyV" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="CV8-0P-A8R"/>
                 <constraint firstAttribute="trailing" secondItem="7vL-OM-r5c" secondAttribute="trailing" constant="8" id="CZf-pg-Dw5"/>
                 <constraint firstItem="rw5-w5-8x8" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="G1q-vP-UzH"/>
                 <constraint firstAttribute="trailing" secondItem="rw5-w5-8x8" secondAttribute="trailing" id="JXV-Aq-YEQ"/>
                 <constraint firstAttribute="centerY" secondItem="rw5-w5-8x8" secondAttribute="centerY" id="MXw-ar-hva"/>
                 <constraint firstAttribute="centerY" secondItem="xmu-dU-370" secondAttribute="centerY" id="PVF-oL-Mgs"/>
                 <constraint firstAttribute="centerX" secondItem="xmu-dU-370" secondAttribute="centerX" id="PYH-M1-Z37"/>
+                <constraint firstAttribute="trailing" secondItem="jhg-o4-fyV" secondAttribute="trailing" id="RbX-kE-u8K"/>
+                <constraint firstAttribute="bottom" secondItem="jhg-o4-fyV" secondAttribute="bottom" id="YEG-Ms-cXy"/>
                 <constraint firstAttribute="bottom" secondItem="xmu-dU-370" secondAttribute="bottom" id="bRy-0J-JOK"/>
                 <constraint firstItem="rw5-w5-8x8" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="eSe-Or-tnh"/>
-                <constraint firstAttribute="trailing" secondItem="xmu-dU-370" secondAttribute="trailing" id="h79-kw-8PS"/>
+                <constraint firstAttribute="trailing" secondItem="xmu-dU-370" secondAttribute="trailing" constant="5" id="h79-kw-8PS"/>
                 <constraint firstItem="rw5-w5-8x8" firstAttribute="top" secondItem="7vL-OM-r5c" secondAttribute="bottom" id="hq9-dh-ow0"/>
                 <constraint firstItem="xmu-dU-370" firstAttribute="top" secondItem="rw5-w5-8x8" secondAttribute="bottom" id="t2y-3g-2Wk"/>
                 <constraint firstAttribute="bottom" secondItem="rw5-w5-8x8" secondAttribute="bottom" id="x6K-v2-Nfu"/>
