--- a/RankTest/viewControllers/picturesCollection/RNKPicturesCollectionVC.xib
+++ b/RankTest/viewControllers/picturesCollection/RNKPicturesCollectionVC.xib
@@ -14,7 +14,7 @@
         <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="0.0" id="c7k-ch-oGk">
                 <size key="itemSize" width="150" height="180"/>
                 <size key="headerReferenceSize" width="10" height="20"/>
