--- a/TheRanking/DetailVC.xib
+++ b/TheRanking/DetailVC.xib
@@ -47,12 +47,17 @@
                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VNt-aZ-fse" userLabel="Image View - Author">
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VNt-aZ-fse" userLabel="Image View - Author">
                                     <rect key="frame" x="108" y="230" width="57" height="57"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="57" id="4sW-SO-QD9"/>
                                         <constraint firstAttribute="height" constant="57" id="csv-RA-ZHc"/>
                                     </constraints>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                            <integer key="value" value="28"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
                                 </imageView>
                                 <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="ZQg-l9-IiP">
                                     <rect key="frame" x="0.0" y="567" width="458" height="320"/>
