--- a/TheRanking/MainCell.xib
+++ b/TheRanking/MainCell.xib
@@ -7,16 +7,16 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MainVC"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="MainCell">
-            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+            <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IAM-i8-rrm">
-                        <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                        <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="fJR-Xs-qya">
-                        <rect key="frame" x="0.0" y="82" width="100" height="18"/>
+                        <rect key="frame" x="0.0" y="182" width="200" height="18"/>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -26,18 +26,18 @@
                         </userDefinedRuntimeAttributes>
                     </label>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="99.8" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g5z-RL-e2S">
-                        <rect key="frame" x="73" y="3" width="24" height="24"/>
+                        <rect key="frame" x="165" y="3" width="32" height="32"/>
                         <color key="backgroundColor" red="0.14509804546833038" green="0.71764707565307617" blue="0.19215688109397888" alpha="1" colorSpace="deviceRGB"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="24" id="A3I-ug-TtM"/>
-                            <constraint firstAttribute="width" constant="24" id="kh1-u5-5oD"/>
+                            <constraint firstAttribute="height" constant="32" id="A3I-ug-TtM"/>
+                            <constraint firstAttribute="width" constant="32" id="kh1-u5-5oD"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                <integer key="value" value="12"/>
+                                <integer key="value" value="16"/>
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </label>
@@ -56,6 +56,7 @@
                 <constraint firstAttribute="trailing" secondItem="fJR-Xs-qya" secondAttribute="trailing" id="sCw-0A-6Bk"/>
                 <constraint firstItem="IAM-i8-rrm" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="seO-Pc-1Fy"/>
             </constraints>
+            <size key="customSize" width="200" height="200"/>
             <connections>
                 <outlet property="bottomSpaceTitleConstraint" destination="2kH-Y3-Ep9" id="Z7n-KG-mIY"/>
                 <outlet property="imageView" destination="IAM-i8-rrm" id="Pjh-Fb-DsG"/>
@@ -63,6 +64,7 @@
                 <outlet property="titleLabel" destination="fJR-Xs-qya" id="nAN-ht-PRi"/>
                 <outlet property="topSpaceRatingConstraint" destination="CGe-gv-HFq" id="t5a-5D-nNJ"/>
             </connections>
+            <point key="canvasLocation" x="466" y="387"/>
         </collectionViewCell>
     </objects>
 </document>
