--- a/The-Ranking-500-PX-Photo-Viewer/The-Ranking-500-PX-Photo-Viewer/PXAuthorTableViewCell.xib
+++ b/The-Ranking-500-PX-Photo-Viewer/The-Ranking-500-PX-Photo-Viewer/PXAuthorTableViewCell.xib
@@ -7,40 +7,39 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="PXAuthorTableViewCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PXAuthorCellIdentifier" id="KGk-i7-Jjw" customClass="PXAuthorTableViewCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MPJ-TC-0pt">
-                        <rect key="frame" x="8" y="0.0" width="80" height="80"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="80" id="JHB-V8-xt6"/>
-                            <constraint firstAttribute="width" constant="80" id="tlk-8K-Vjw"/>
-                        </constraints>
-                        <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadious">
-                                <integer key="value" value="40"/>
-                            </userDefinedRuntimeAttribute>
-                        </userDefinedRuntimeAttributes>
-                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y3M-LA-YXw">
-                        <rect key="frame" x="96" y="28" width="206" height="24"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                        <rect key="frame" x="96" y="30" width="206" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MPJ-TC-0pt">
+                        <rect key="frame" x="17" y="11" width="60" height="60"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="60" id="fe9-r4-M9o"/>
+                            <constraint firstAttribute="height" constant="60" id="nM4-fK-78b"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="centerY" secondItem="y3M-LA-YXw" secondAttribute="centerY" id="GE9-lE-35X"/>
-                    <constraint firstItem="MPJ-TC-0pt" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="HEh-sQ-Ufl"/>
+                    <constraint firstAttribute="centerY" secondItem="MPJ-TC-0pt" secondAttribute="centerY" constant="-1.5" id="BBd-dS-KDn"/>
+                    <constraint firstAttribute="centerY" secondItem="y3M-LA-YXw" secondAttribute="centerY" constant="-1" id="GE9-lE-35X"/>
                     <constraint firstItem="y3M-LA-YXw" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="88" id="jxm-SN-NZh"/>
-                    <constraint firstAttribute="centerY" secondItem="MPJ-TC-0pt" secondAttribute="centerY" constant="-0.5" id="kIU-Xu-W58"/>
+                    <constraint firstItem="MPJ-TC-0pt" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="9" id="seG-8j-TEp"/>
                     <constraint firstAttribute="trailingMargin" secondItem="y3M-LA-YXw" secondAttribute="trailing" constant="10" id="zYx-q4-RB6"/>
                 </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="fullnameLabel" destination="y3M-LA-YXw" id="nlD-6h-TEi"/>
+                <outlet property="pictureImageView" destination="MPJ-TC-0pt" id="BvF-nJ-X0y"/>
+            </connections>
             <point key="canvasLocation" x="771" y="370"/>
         </tableViewCell>
     </objects>
