--- a/The-Ranking-500-PX-Photo-Viewer/The-Ranking-500-PX-Photo-Viewer/PXDescriptionTableViewCell.xib
+++ b/The-Ranking-500-PX-Photo-Viewer/The-Ranking-500-PX-Photo-Viewer/PXDescriptionTableViewCell.xib
@@ -7,7 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="PXDescriptionTableViewCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="PXDescriptionCellIdentifier" id="KGk-i7-Jjw" customClass="PXDescriptionTableViewCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -30,6 +30,9 @@
                     <constraint firstAttribute="bottomMargin" secondItem="m8E-b9-24h" secondAttribute="bottom" id="W2q-NS-lRd"/>
                 </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="descriptionTextView" destination="m8E-b9-24h" id="q2I-0e-RLf"/>
+            </connections>
             <point key="canvasLocation" x="764" y="288"/>
         </tableViewCell>
     </objects>
