--- a/TheRanking/TheRanking/TRMasterViewController.xib
+++ b/TheRanking/TheRanking/TRMasterViewController.xib
@@ -6,6 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TRMasterViewController">
             <connections>
+                <outlet property="collectionView" destination="Ulf-Cd-FMD" id="qBC-r6-EPZ"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -13,7 +14,28 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Ulf-Cd-FMD">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="FZt-kV-gb4">
+                        <size key="itemSize" width="50" height="50"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="qvH-Iw-UIh"/>
+                        <outlet property="delegate" destination="-1" id="sDl-mu-UVn"/>
+                    </connections>
+                </collectionView>
+            </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="Ulf-Cd-FMD" secondAttribute="bottom" id="7Fq-mf-97w"/>
+                <constraint firstItem="Ulf-Cd-FMD" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="A1J-qc-OfD"/>
+                <constraint firstAttribute="trailing" secondItem="Ulf-Cd-FMD" secondAttribute="trailing" id="UnG-eI-GX7"/>
+                <constraint firstItem="Ulf-Cd-FMD" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="pa1-wL-yCk"/>
+            </constraints>
         </view>
     </objects>
 </document>
